Copy hw4 to hw6