@@ -9,6 +9,9 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
+        <allure-maven.version>2.11.2</allure-maven.version>
+        <aspectj.version>1.9.7</aspectj.version>
+        <allure-testng.version>2.17.2</allure-testng.version>
         <webdrivermanager.version>5.3.0</webdrivermanager.version>
         <selenium.version>4.6.0</selenium.version>
         <lombok.version>1.18.24</lombok.version>
@@ -75,6 +78,11 @@
             <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-testng</artifactId>
+            <version>${allure-testng.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -95,10 +103,26 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M5</version>
                 <configuration>
+                    <argLine>-javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                    </argLine>
                     <suiteXmlFiles>
                         <suiteXmlFile>${testng.suite.file}</suiteXmlFile>
                     </suiteXmlFiles>
                 </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.aspectj</groupId>
+                        <artifactId>aspectjweaver</artifactId>
+                        <version>${aspectj.version}</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+
+            <plugin>
+                <groupId>io.qameta.allure</groupId>
+                <artifactId>allure-maven</artifactId>
+                <version>${allure-maven.version}</version>
             </plugin>
 
             <plugin>
@@ -167,11 +191,25 @@
 
         <profile>
             <id>seleniumPageObjects</id>
+            <properties>
+                <testng.suite.file>${testng.configs.path}/seleniumPageObjects.xml</testng.suite.file>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>allure</id>
+            <properties>
+                <testng.suite.file>${testng.configs.path}/allure.xml</testng.suite.file>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>grid</id>
             <activation>
                 <activeByDefault>true</activeByDefault>
             </activation>
             <properties>
-                    <testng.suite.file>${testng.configs.path}/seleniumPageObjects.xml</testng.suite.file>
+                <testng.suite.file>${testng.configs.path}/grid.xml</testng.suite.file>
             </properties>
         </profile>
     </profiles>
